[gd_scene load_steps=18 format=3 uid="uid://b6qc45tpm0f0g"]

[ext_resource type="Script" uid="uid://b3yianhdu64a1" path="res://scripts/green_slime.gd" id="1_0pvn7"]
[ext_resource type="Texture2D" uid="uid://i3rn2m000hxu" path="res://assets/sprites/slime_green.png" id="1_bln8p"]
[ext_resource type="PackedScene" uid="uid://dukpuod0bk3hc" path="res://scenes/killzone.tscn" id="2_tuic5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tuic5"]
atlas = ExtResource("1_bln8p")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pvn7"]
atlas = ExtResource("1_bln8p")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q1e0"]
atlas = ExtResource("1_bln8p")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_boo2g"]
atlas = ExtResource("1_bln8p")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq38r"]
atlas = ExtResource("1_bln8p")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_io87k"]
atlas = ExtResource("1_bln8p")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q1p6"]
atlas = ExtResource("1_bln8p")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl2pm"]
atlas = ExtResource("1_bln8p")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q800"]
atlas = ExtResource("1_bln8p")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_35rgu"]
atlas = ExtResource("1_bln8p")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5vyh"]
atlas = ExtResource("1_bln8p")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_452or"]
atlas = ExtResource("1_bln8p")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ukqwe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuic5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pvn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q1e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boo2g")
}],
"loop": true,
"name": &"damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq38r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io87k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q1p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl2pm")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q800")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35rgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5vyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_452or")
}],
"loop": true,
"name": &"wake",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pvn7"]
size = Vector2(11, 11.5)

[node name="Green Slime" type="Node2D"]
script = ExtResource("1_0pvn7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_ukqwe")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.0415143

[node name="Killzone" parent="." instance=ExtResource("2_tuic5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -5.75)
shape = SubResource("RectangleShape2D_0pvn7")

[node name="RayCastRightDown" type="RayCast2D" parent="."]
position = Vector2(8, -3)
target_position = Vector2(0, 9)

[node name="RayCastLeftDown" type="RayCast2D" parent="."]
position = Vector2(-8, -3)
target_position = Vector2(0, 9)

[node name="RayCastRightSide" type="RayCast2D" parent="."]
position = Vector2(3, -6)
rotation = -1.5708
target_position = Vector2(-4.76837e-07, 5)

[node name="RayCastLeftSide" type="RayCast2D" parent="."]
position = Vector2(-3, -6)
rotation = 1.5708
target_position = Vector2(4.76837e-07, 5)
